tests/diagnostics/catalog/snapshots/ir/IR0006.snap
error[IR0006]: IR_E_BORROW_CONFLICT
 --> tests/diagnostics/catalog/sources/ir/IR0006.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0006
  = help: keep IR validation diagnostics structured and catalog-backed
